<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_name_layout"
        android:layout_marginTop="15dp">

        <AutoCompleteTextView
            android:id="@+id/recipe_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_type_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/recipe_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_type_layout"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipe_add_ingredient"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_ingredient_button" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipe_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_add_button" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/recipe_ingredients_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_buttons_layout"
        android:layout_marginTop="10dp"
        android:text="@string/recipe_ingredients"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/recipe_ingredient_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/recipe_ingredients_text"
        android:layout_marginTop="5dp" />

</RelativeLayout>
