<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@drawable/card_background"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/card_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/card_delete"
            android:background="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/card_edit_description" />

        <ImageView
            android:id="@+id/card_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_baseline_delete_24"
            android:contentDescription="@string/card_delete_description" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/card_calendar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_calendar_today_24"
            android:contentDescription="@string/card_calendar_description" />

        <TextView
            android:id="@+id/card_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/card_calendar_image" />

        <TextView
            android:id="@+id/card_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/chip_background"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>
